--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "koa": "~2.0.1",
     "koa-logger": "^2.0.1",
+    "koa-multer": "^1.0.1",
     "koa-router": "^7.0.1",
     "koa-static": "^3.0.0"
   }
